test: nbp connection add curse data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,32 @@
+logging.level.web=DEBUG
+logging.level.org.springframework.web.server.adapter.HttpWebHandlerAdapter=TRACE
 
+logging.level.org.springframework.web.reactive.function.client.ExchangeFilterFunctions=trace
+spring.codec.log-request-details=true
+
+spring.main.web-application-type=reactive
+
+edu.sharing.user=admin
+edu.sharing.password=admin
+edu.sharing.basePath=http://repository.127.0.0.1.nip.io:8100/edu-sharing/rest
+edu.sharing.course.id=
+edu.sharing.readtimeout=120000
+nbp.datenraum.baseurl=https://dam.demo.meinbildungsraum.de
+
+# TODO remove secrets
+spring.security.auth-token=
+# TODO remove secrets
+nbp.sourceId=edu-sharing-editorial-network 
+
+spring.security.oauth2.client.registration.nbp.authorization-grant-type=client_credentials
+# TODO remove secrets
+spring.security.oauth2.client.registration.nbp.client-id=de0191ad-90f6-406c-b972-e4e677161784
+spring.security.oauth2.client.registration.nbp.client-secret=FIfNnTXM5wZ5p82JuQF79AOu5yKfO22v
+spring.security.oauth2.client.provider.nbp.issuer-uri=https://aai.demo.meinbildungsraum.de/realms/nbp-aai
+
+management.endpoint.health.probes.enabled = true
+management.endpoint.health.show-details = always
+management.endpoint.health.show-components = always
+management.endpoints.web.exposure.include = health,metrics,prometheus
+management.server.address=0.0.0.0
+management.server.port=8081
