--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,15 +13,12 @@ edu.sharing.course.id=
 edu.sharing.readtimeout=120000
 nbp.datenraum.baseurl=https://dam.demo.meinbildungsraum.de
 
-# TODO remove secrets
 spring.security.auth-token=
-# TODO remove secrets
-nbp.sourceId=edu-sharing-editorial-network 
+nbp.sourceId=
 
 spring.security.oauth2.client.registration.nbp.authorization-grant-type=client_credentials
-# TODO remove secrets
-spring.security.oauth2.client.registration.nbp.client-id=de0191ad-90f6-406c-b972-e4e677161784
-spring.security.oauth2.client.registration.nbp.client-secret=FIfNnTXM5wZ5p82JuQF79AOu5yKfO22v
+spring.security.oauth2.client.registration.nbp.client-id=
+spring.security.oauth2.client.registration.nbp.client-secret=
 spring.security.oauth2.client.provider.nbp.issuer-uri=https://aai.demo.meinbildungsraum.de/realms/nbp-aai
 
 management.endpoint.health.probes.enabled = true
