--- a/src/main/chart/templates/configmap-env.yaml
+++ b/src/main/chart/templates/configmap-env.yaml
@@ -6,8 +6,7 @@ metadata:
 data:
   APPLICATION_CACHE_TTL: "{{ .Values.service.cache.ttl }}"
   EDU_SHARING_BASEPATH: "{{ .Values.config.repository.basepath }}"
-  EDU_SHARING_COURSE_ID: "{{ .Values.config.repository.collection }}"
-  EDU_SHARING_READTIMEOUT: "{{ .Values.config.repository.timeout }}"
+  spring.security.oauth2.client.provider.nbp.issuer-uri: "{{ .Values.config.nbp.oAuth2.issuerUrl }}"
   SPRING_MVC_ASYNC_REQUEST-TIMEOUT: "{{ .Values.service.timeout }}"
   JAVA_OPTS: >-
     {{- with .Values.config.jvm.ram.minPercentage }}
