--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,7 @@ spring.main.web-application-type=reactive
 
 edu.sharing.user=admin
 edu.sharing.password=admin
-edu.sharing.basePath=http://repository.127.0.0.1.nip.io:8100/edu-sharing/rest
-edu.sharing.course.id=
+edu.sharing.baseUrl=http://repository.127.0.0.1.nip.io:8100/edu-sharing
 edu.sharing.readtimeout=120000
 nbp.datenraum.baseurl=https://dam.demo.meinbildungsraum.de
 
