--- a/pom.xml
+++ b/pom.xml
@@ -238,72 +238,72 @@
 
       <build>
         <plugins>
-<!--          <plugin>-->
-<!--            <groupId>io.kokuwa.maven</groupId>-->
-<!--            <artifactId>helm-maven-plugin</artifactId>-->
-<!--            <version>6.8.0</version>-->
-<!--            <configuration>-->
-<!--              <helmVersion>3.10.0</helmVersion>-->
-<!--              <chartDirectory>src/main/chart</chartDirectory>-->
-<!--              <chartVersion>${chart.version}</chartVersion>-->
-<!--              <appVersion>${project.version}</appVersion>-->
-<!--              <lintStrict>false</lintStrict>-->
-<!--              <addDefaultRepo>false</addDefaultRepo>-->
-<!--              <uploadRepoStable>-->
-<!--                <url>https://artifacts.edu-sharing.com/repository/helm/</url>-->
-<!--                <type>NEXUS</type>-->
-<!--                &lt;!&ndash;suppress UnresolvedMavenProperty &ndash;&gt;-->
-<!--                <username>${env.HELM_USERNAME}</username>-->
-<!--                &lt;!&ndash;suppress UnresolvedMavenProperty &ndash;&gt;-->
-<!--                <password>${env.HELM_PASSWORD}</password>-->
-<!--              </uploadRepoStable>-->
-<!--              <uploadRepoSnapshot>-->
-<!--                <url>https://artifacts.edu-sharing.com/repository/helm/</url>-->
-<!--                <type>NEXUS</type>-->
-<!--                &lt;!&ndash;suppress UnresolvedMavenProperty &ndash;&gt;-->
-<!--                <username>${env.HELM_USERNAME}</username>-->
-<!--                &lt;!&ndash;suppress UnresolvedMavenProperty &ndash;&gt;-->
-<!--                <password>${env.HELM_PASSWORD}</password>-->
-<!--              </uploadRepoSnapshot>-->
-<!--            </configuration>-->
-<!--            <executions>-->
-<!--              <execution>-->
-<!--                <id>init</id>-->
-<!--                <goals>-->
-<!--                  <goal>init</goal>-->
-<!--                </goals>-->
-<!--                <phase>initialize</phase>-->
-<!--              </execution>-->
-<!--              <execution>-->
-<!--                <id>dependency-build</id>-->
-<!--                <goals>-->
-<!--                  <goal>dependency-build</goal>-->
-<!--                </goals>-->
-<!--                <phase>compile</phase>-->
-<!--              </execution>-->
-<!--              <execution>-->
-<!--                <id>lint</id>-->
-<!--                <goals>-->
-<!--                  <goal>lint</goal>-->
-<!--                </goals>-->
-<!--                <phase>test</phase>-->
-<!--              </execution>-->
-<!--              <execution>-->
-<!--                <id>package</id>-->
-<!--                <goals>-->
-<!--                  <goal>package</goal>-->
-<!--                </goals>-->
-<!--                <phase>package</phase>-->
-<!--              </execution>-->
-<!--              <execution>-->
-<!--                <id>upload</id>-->
-<!--                <goals>-->
-<!--                  <goal>upload</goal>-->
-<!--                </goals>-->
-<!--                <phase>deploy</phase>-->
-<!--              </execution>-->
-<!--            </executions>-->
-<!--          </plugin>-->
+          <plugin>
+            <groupId>io.kokuwa.maven</groupId>
+            <artifactId>helm-maven-plugin</artifactId>
+            <version>6.8.0</version>
+            <configuration>
+              <helmVersion>3.10.0</helmVersion>
+              <chartDirectory>src/main/chart</chartDirectory>
+              <chartVersion>${chart.version}</chartVersion>
+              <appVersion>${project.version}</appVersion>
+              <lintStrict>false</lintStrict>
+              <addDefaultRepo>false</addDefaultRepo>
+              <uploadRepoStable>
+                <url>https://artifacts.edu-sharing.com/repository/helm/</url>
+                <type>NEXUS</type>
+                <!--suppress UnresolvedMavenProperty -->
+                <username>${env.HELM_USERNAME}</username>
+                <!--suppress UnresolvedMavenProperty -->
+                <password>${env.HELM_PASSWORD}</password>
+              </uploadRepoStable>
+              <uploadRepoSnapshot>
+                <url>https://artifacts.edu-sharing.com/repository/helm/</url>
+                <type>NEXUS</type>
+                <!--suppress UnresolvedMavenProperty -->
+                <username>${env.HELM_USERNAME}</username>
+                <!--suppress UnresolvedMavenProperty -->
+                <password>${env.HELM_PASSWORD}</password>
+              </uploadRepoSnapshot>
+            </configuration>
+            <executions>
+              <execution>
+                <id>init</id>
+                <goals>
+                  <goal>init</goal>
+                </goals>
+                <phase>initialize</phase>
+              </execution>
+              <execution>
+                <id>dependency-build</id>
+                <goals>
+                  <goal>dependency-build</goal>
+                </goals>
+                <phase>compile</phase>
+              </execution>
+              <execution>
+                <id>lint</id>
+                <goals>
+                  <goal>lint</goal>
+                </goals>
+                <phase>test</phase>
+              </execution>
+              <execution>
+                <id>package</id>
+                <goals>
+                  <goal>package</goal>
+                </goals>
+                <phase>package</phase>
+              </execution>
+              <execution>
+                <id>upload</id>
+                <goals>
+                  <goal>upload</goal>
+                </goals>
+                <phase>deploy</phase>
+              </execution>
+            </executions>
+          </plugin>
         </plugins>
       </build>
     </profile>
