--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-logging.level.web=DEBUG
-logging.level.org.springframework.web.server.adapter.HttpWebHandlerAdapter=TRACE
+#logging.level.web=DEBUG
+#logging.level.org.springframework.web.server.adapter.HttpWebHandlerAdapter=TRACE
 
-logging.level.org.springframework.web.reactive.function.client.ExchangeFilterFunctions=trace
-spring.codec.log-request-details=true
+#logging.level.org.springframework.web.reactive.function.client.ExchangeFilterFunctions=trace
+#spring.codec.log-request-details=true
 
 spring.main.web-application-type=reactive
 
@@ -13,7 +13,7 @@ edu.sharing.readtimeout=120000
 nbp.datenraum.baseurl=https://dam.demo.meinbildungsraum.de
 
 spring.security.auth-token=
-nbp.sourceId=
+nbp.source.slug=
 
 spring.security.oauth2.client.registration.nbp.authorization-grant-type=client_credentials
 spring.security.oauth2.client.registration.nbp.client-id=
