--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ edu.sharing.readtimeout=120000
 nbp.datenraum.baseurl=https://dam.demo.meinbildungsraum.de
 
 spring.security.auth-token=
-nbp.source.slug=
+nbp.source.slug=edu-sharing-editorial-network
 
 spring.security.oauth2.client.registration.nbp.authorization-grant-type=client_credentials
 spring.security.oauth2.client.registration.nbp.client-id=
